compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__bit_array_segment_type_does_not_allow_unit_codepoint_utf8_2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 125
expression: "let x = <<1:utf8_codepoint-size(5)>> x"
snapshot_kind: text
---
----- SOURCE CODE
let x = <<1:utf8_codepoint-size(5)>> x

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:13
  │
1 │ let x = <<1:utf8_codepoint-size(5)>> x
  │             ^^^^^^^^^^^^^^ Size cannot be specified here

Hint: utf8_codepoint segments have an automatic size.
See: https://tour.gleam.run/data-types/bit-arrays/
